
- Unit tests were failing if numpy is not installed.

- :mod:`rpy2.situation` is no longer breaking when R is not the in path and
  there is no environment variable `R_HOME`.

- Build script for the cffi interface is now using the environment
  variable `R_HOME` whenever defined (rather that always infer it from the
  R in the PATH).


Release 3.1.0
============

New features
------------

- Python matrix multiplication (`__matmul__` / `@`) added to
  R :class:`Matrix` objects.

- An :class:`threading.RLock` is added to :mod:`rpy2.rinterface_lib.openrlib` and is
  used by the context manager :func:`rpy2.rinterface_lib.memorymanagement.rmemory`
  to ensure that protect/unprotect cycles cannot be broken by thread switching, at least
  as long as the context manager is used to handle such cycles (see issue #571).

- The documentation covers the use of notebooks (mainly Jupyter/Jupyterlab).

- The PNG output in Jupyter notebooks R cells can now specify an argument `--type`
  (passed as the named argument `type` in the R function `png`).
  For example on some Linux systems and R installations, the type `cairo`
  can fix issues when alpha transparency is used.

Changes
-------

- Added callbacks for `ptr_R_Busy()` and `ptr_R_ProcessEvents()`.

- `rstart` now an objects in :mod:`rpy2.rinterface_lib.embedded`
  (set to `None` until R is initialized).

- Unit tests are included in a subpackage :mod:`rpy2.tests` as was the
  case before release 3.0.0 (issue #528).

- Experimental initialization for Microsoft Windows.

- :mod:`rpy2.situation` is now also reporting the rpy2 version.

- :func:`rpy2.robjecs.package_utils.default_symbol_check_after` was
  renamed  :func:`rpy2.robjecs.package_utils.default_symbol_resolve`.
  The named parameters `default_symbol_check_after` present in few methods
  in :mod:`rpy2.robjects.packages` and :mod:`rpy2.robjects.functions` were
  modified to keep a consistent naming.
